--- a/Networking/Networking.csproj
+++ b/Networking/Networking.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="xcopy /y /d  &quot;$(ProjectDir)$(OutDir)\Networking.dll&quot; &quot;C:\Frameworks&quot;&#xA;xcopy /y /d  &quot;C:\Frameworks\Networking.dll&quot; &quot;C:\UndefinedProject\Undefined\Plugins&quot;" />
+      <Exec Command="xcopy /y /d  &quot;$(ProjectDir)$(OutDir)\Networking.dll&quot; &quot;C:\Frameworks&quot;" />
     </Target>
 
 </Project>
